[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy/boss_gura_attack/meteo.png" type="Texture" id=1]
[ext_resource path="res://script/meteo.gd" type="Script" id=2]
[ext_resource path="res://sfx/whatDis01.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 212, 196 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Meteo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "black"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Meteo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 2.35476,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "meteo"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Meteo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.929412, 0.682353, 0.101961, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 656, 588.712 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 325, 301 )

[node name="Meteo" type="RigidBody2D"]
position = Vector2( 960, 384 )
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Meteo" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/black = SubResource( 6 )
anims/meteo = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 17.8298, -28.657 )
rotation = 0.712072
shape = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -112, 128 )
rotation = -0.840852
shape = SubResource( 5 )

[node name="CutsceneTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
__meta__ = {
"_editor_description_": "Black and white cutscene helper"
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="CutsceneTimer" to="." method="_on_CutsceneTimer_timeout"]
